@@ -1,3 +1,7 @@
+2006-01-07  Benhur Stein <benhur@inf.ufsm.br>
+	* SpaceTimeViewer/DrawView+Drawing.m, SpaceTimeViewer/DrawView.m: code
+	  cleanup & use NSBezierPath to draw states
+
 2006-01-06  Benhur Stein <benhur@inf.ufsm.br>
 	* ReductionFilter/BusyArray.h, ReductionFilter/BusyArray.m,
 	  ReductionFilter/ReduceEntityType.m: code cleanup & better reverse
